[package]
name = "ksaw"
version = "0.1.0"
edition = "2021"
authors = ["zeroday0619 <zeroday0619_dev@outlook.com>"]
repository = "https://github.com/zeroday-rs/ksaw.git"
description = "kakao speech api wrapper"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
